<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tentacles</string>
    <string name="user_interface">Interface</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="default_string">Default</string>
    <string name="menu_cancel">Discard</string>
    <string name="disabled">Disabled</string>
    <string name="additional_options_title">Additional options</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary" translatable="false">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="time_0_seconds_off">Off</string>
    <string name="time_0_2_seconds">.2 seconds</string>
    <string name="time_0_5_seconds">.5 seconds</string>
    <string name="time_1_second">1 second</string>
    <string name="time_1_5_seconds">1.5 seconds</string>
    <string name="time_2_seconds">2 seconds</string>
    <string name="time_2_5_seconds">2.5 seconds</string>
    <string name="time_3_seconds">3 seconds</string>
    <string name="time_3_5_seconds">3.5 seconds</string>
    <string name="time_4_seconds">4 seconds</string>
    <string name="time_4_5_seconds">4.5 seconds</string>
    <string name="time_5_seconds">5 seconds</string>
    <string name="time_5_5_seconds">5.5 seconds</string>
    <string name="time_6_seconds">6 seconds</string>
    <string name="time_7_seconds">7 seconds</string>
    <string name="time_8_seconds">8 seconds</string>
    <string name="time_9_seconds">9 seconds</string>
    <string name="time_10_seconds">10 seconds</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="apps">Apps</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#ff000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="button_settings">Buttons</string>
    <string name="keys_bindings_title">Key actions</string>
    <string name="keys_enable_custom_title">Enable custom actions</string>
    <string name="keys_enable_custom_summary">Enable custom hardware key actions</string>
    <string name="keys_back_press_title">Back key</string>
    <string name="keys_back_long_press_title">Back key (long press)</string>
    <string name="keys_back_double_tap_title">Back key (double tap)</string>
    <string name="keys_home_press_title">Home key</string>
    <string name="keys_home_long_press_title">Home key (long press)</string>
    <string name="keys_home_double_tap_title">Home key (double tap)</string>
    <string name="keys_menu_press_title">Menu key</string>
    <string name="keys_menu_long_press_title">Menu key (long press)</string>
    <string name="keys_menu_double_tap_title">Menu key (double tap)</string>
    <string name="keys_assist_press_title">Search key</string>
    <string name="keys_assist_long_press_title">Search key (long press)</string>
    <string name="keys_assist_double_tap_title">Search key (double tap)</string>
    <string name="keys_app_switch_press_title">App switch key</string>
    <string name="keys_app_switch_long_press_title">App switch key (long press)</string>
    <string name="keys_app_switch_double_tap_title">App switch key (double tap)</string>
    <string name="keys_action_normal">Normal press</string>
    <string name="keys_action_long">Long press</string>
    <string name="keys_action_double">Double tap</string>
    <string name="no_home_key">You have no button assigned any more to the \"Home\" action!\n\nThis can make your device unusable!</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="home_wake_title">Home button wake</string>
    <string name="home_wake_summary">Pressing the home button will wake your device</string>
    <string name="camera_wake_title">Camera button wake</string>
    <string name="camera_wake_summary">Pressing the camera button will wake your device</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_music_controls_title">Playback control</string>
    <string name="camera_music_controls_summary">When the screen is off, long pressing the camera key will play/pause current music track</string>
    <string name="volume_wake_title">Volume button wake</string>
    <string name="volume_wake_summary">Pressing either volume button will wake your device</string>
    <string name="volbtn_music_controls_title">Playback control</string>
    <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="swap_volume_buttons_title">Reorient volume buttons</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="more_device_controls_title">Device tunables</string>
    <string name="more_device_settings_title">Other device options</string>
    <string name="sensors_motors_title">Sensors &amp; motors</string>
    <string name="display_calibration_title">Display calibration</string>
    <string name="vibrator_intensity_title">Vibrator intensity</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
    <string name="color_calibration_title">Color calibration</string>
    <string name="color_calibration_summary">Calibrate on-screen colors</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="category_gamma_title">Gamma</string>
    <string name="gamma_tuning_title_head">Gamma calibration</string>
    <string name="gamma_tuning_summary_head">Tweak gamma values</string>
    <string name="gamma_tuning_control_set_header">Group <xliff:g id="index">%d</xliff:g></string>
    <string name="gamma_tuning_contrast">Contrast</string>
    <string name="gamma_tuning_brightness">Brightness</string>
    <string name="gamma_tuning_saturation">Saturation</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="button_backlight_enabled">Illuminate buttons</string>
    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
    <string name="button_backlight_seekbar_title">Button brightness</string>
    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
    <string name="backlight_timeout_title">Illumination timeout</string>
    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
    <plurals name="backlight_timeout_time">
        <item quantity="one"><xliff:g id="seconds">%d</xliff:g> second</item>
        <item quantity="other"><xliff:g id="seconds">%d</xliff:g> seconds</item>
    </plurals>
    <string name="backlight_summary_disabled">Disabled</string>
    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
    <string name="backlight_summary_enabled">Enabled</string>
    <string name="category_app_circle_bar_title">App launcher</string>
    <string name="app_circle_bar_title">App circle bar</string>
    <string name="app_circle_bar_summary">Show circle app launcher after touching right side of screen</string>
    <string name="app_circle_bar_included_apps_title">Included apps</string>
    <string name="app_circle_bar_included_apps_summary">Apps will show in app circle bar</string>
    <string name="trigger_category">Trigger region</string>
    <string name="trigger_width_title">Trigger width</string>
    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
    <string name="trigger_top_title">Trigger position</string>
    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
    <string name="trigger_bottom_title">Trigger height</string>
    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
    <string name="installer_title">Persistence</string>
    <string name="persist_options">Persistence</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="persist_file_hosts_summary">Persist hosts file</string>
    <string name="persist_file_xposed">Persist Xposed</string>
    <string name="persist_file_xposed_summary">Persist file app_process for Xposed framework</string>
    <string name="status_bar_title">Statusbar</string>
    <string name="sb_battery_category">Battery</string>
    <string name="sb_clock_category">Clock</string>
    <string name="sb_general_category">General</string>
    <string name="sb_notification_category">Notification Drawer</string>
    <string name="sb_quicksettings_category">Quick Settings</string>
    <string name="ui_general_category">General</string>
    <string name="ui_recents_category">Recents Panel</string>
    <string name="lock_clock_title">Clock widget</string>
    <string name="lock_clock_summary">View or change CM cLock widget options</string>
    <string name="keyguard_title">Lockscreen</string>
    <string name="ls_targets_category">Targets</string>
    <string name="ls_general_category">General</string>
    <string name="ls_notifications_category">Notifications</string>
    <string name="ls_activedisplay_category">Active Display</string>
    <string name="ls_buttons_category">Buttons</string>
    <string name="clear_button_title">Clear all position</string>
    <string name="clear_button_off">Off</string>
    <string name="clear_button_top_left">Top left</string>
    <string name="power_menu_title">Power menu</string>
    <string name="navbar_cat">Navigation bar</string>
    <string name="pie_tentacles_title">Pie</string>
</resources>