<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:title="@string/app_name" />
        
	    <header
	        android:key="@+id/themes_settings"
	        android:icon="@drawable/ic_settings_themes"
	        android:title="@string/themes_settings_title"
	        android:fragment="com.oct.tentacles.fragments.ThemerSettings" />

        <header
            android:id="@+id/button_settings"
            android:icon="@drawable/ic_tentacles_button"
            android:title="@string/button_settings"
            android:fragment="com.oct.tentacles.fragments.ButtonSettings" />

        <header
            android:id="@+id/more_device_settings"
            android:title="@string/more_device_controls_title"
            android:icon="@drawable/ic_tentacles_device"
            android:fragment="com.oct.tentacles.fragments.MoreDeviceSettings" />

        <header
            android:key="@+id/interface_settings"
            android:icon="@drawable/ic_tentacles_interface"
            android:title="@string/user_interface"
            android:fragment="com.oct.tentacles.fragments.ui.InterfaceSettings" />

        <header
            android:id="@+id/keyguard_settings"
            android:icon="@drawable/ic_tentacles_keyguard"
            android:title="@string/keyguard_title"
            android:fragment="com.oct.tentacles.fragments.ls.KeyguardSettings" />

        <header
            android:id="@+id/navbar_settings"
            android:icon="@drawable/ic_settings_navigation"
            android:title="@string/navbar_cat"
            android:fragment="com.oct.tentacles.fragments.navbar.NavbarTab" />

        <header
            android:id="@+id/installer_settings"
            android:title="@string/installer_title"
            android:icon="@drawable/ic_rom_control_installer"
            android:fragment="com.oct.tentacles.fragments.installer.InstallerSettingsFragment" />

        <header
            android:id="@+id/pie_control"
            android:title="@string/pie_tentacles_title"
            android:icon="@drawable/ic_tentacles_pie"
            android:fragment="com.oct.tentacles.fragments.pie.PieTab" />

        <header
            android:key="@+id/performance_control"
            android:title="@string/performance_control_title"
            android:icon="@drawable/ic_settings_performance"
            android:fragment="com.oct.tentacles.fragments.PerformanceFragment" />

        <header
            android:id="@+id/power_menu_settings"
            android:title="@string/power_menu_title"
            android:icon="@drawable/ic_tentacles_power"
            android:fragment="com.oct.tentacles.dslv.ButtonsListViewSettings" >
                <extra android:name="buttonMode" android:value="6" />
                <extra android:name="maxAllowedButtons" android:value="8" />
                <extra android:name="disableLongpress" android:value="true" />
                <extra android:name="disableDeleteLastEntry" android:value="true" />
                <extra android:name="actionValues" android:value="shortcut_action_power_menu_values" />
                <extra android:name="actionEntries" android:value="shortcut_action_power_menu_entries" />
                <extra android:name="fragment" android:value="com.oct.tentacles.fragments.PowerMenuFragment" />
        </header>

        <header
            android:fragment="com.oct.tentacles.fragments.PrivacyFragment"
            android:icon="@drawable/ic_settings_privacy"
            android:title="@string/custom_privacy_settings_title"
            android:id="@+id/custom_privacy_settings" />

        <header
            android:id="@+id/statusbar_settings"
            android:title="@string/status_bar_title"
            android:icon="@drawable/ic_tentacles_sb"
            android:fragment="com.oct.tentacles.fragments.sb.SbSettings" />

    	<header
        	android:id="@+id/supersu_settings"
        	android:icon="@drawable/ic_settings_supersu"
        	android:title="@string/supersu_title">
        	<intent
            	android:action="android.intent.action.MAIN"
            	android:targetPackage="eu.chainfire.supersu"
            	android:targetClass="eu.chainfire.supersu.MainActivity" />
    	</header>  

</preference-headers>
